microk8s/app/k8s-expose-service/hello-world-rest-hostnetwork.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-rest
spec:
  hostNetwork: true
  containers:
    - name: hello-world-rest
      image: vad1mo/hello-world-rest
