microk8s/app/k8s-expose-service/hello-world-rest-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-rest
spec:
  rules:
    - host: microk8s.ashimjk.io
      http:
        paths:
          - backend:
              serviceName: hello-world-rest
              servicePort: 8086
